剩余线程统一改造为虚拟线程
WebSocketClient: heartbeatThread/reconnector改用Thread.ofVirtual
AbstractConnectionPool: evictor改用虚拟线程工厂
MemoryHttpServer(2处)/MetricsHttpServer: newFixedThreadPool改用newVirtualThreadPerTaskExecutor
仅保留JVM ShutdownHook为平台线程(Requirement)